# ETVR-Data-Collection

./: Camera.py  README.md  Record.py  data_validator.py  imganno.py  pyproject.toml
mass_collection_easy/: _ensure_masscollect_venv.bat  build_masscollect_exe.bat  masscollect.py  masscollectbsb2e.py  repair_masscollect_numpy.bat  requirements-build.txt  requirements.txt  run_masscollect.bat
